# Noisey-image

./: .gitignore  .txt  README.md  app.py  app.py.bak  app.spec  detector.py  makeBetterGraph.py  makeDefaultImage.py  makeDefaultVideo.py  noise_image.py  noise_video_gen.py  noises.py  requirements.txt  test_sp.ipynb  validate.py
.qt_for_python/uic/: dialogAug.py
Gui/: UI.py  app.py  main_window.ui  mainwindow.py  mainwindow_ui.py  resources.qrc  resources_rc.py  untitled.ui  window.py
cae/configs/: test.yaml  train.yaml
cae/src/: train.py
compression/: copy_paste_example.py  yolo.py
docs/: conf.py  index.rst
docs/source/: main_tutorial_guide.rst  src.mit_semseg.config.rst  src.mit_semseg.lib.nn.parallel.rst  src.mit_semseg.lib.rst  src.mit_semseg.lib.utils.rst  src.mit_semseg.rst  src.obj_detector.rst  src.obj_detector.utils.rst  src.rst
imgs/: new_label_test.yaml  old_test_labels.yaml  test.yaml  test_labels.yaml
imgs/COCO/: annotations  coco.yaml  val2017
imgs/LABELS/: cars.txt  cars2.txt  cars3.txt
imgs/default_faces/: default.yaml  degrade.py
jupyter_files/: noise_on_region.ipynb  seg_test.py  torchscript.ipynb
src/: app.py  compare_imgs.py  dataParser.py  experimentDialog.py  export.py  h264.py  main_window.ui  models.py  mplwidget.py  noise_image.py  noise_video_gen.py  noises.py  predict_img.py  qlabel.py  transforms.py  videoTransform.py  window.py  yamlDialog.py
src/detr/: model.py
src/effdet/: anchors.py  (+1 more)
src/jit/yolo_test/: CMakeLists.txt  build.sh  run_jit.py  utils.py  yolo_test.cpp
videos/: test.py
yolov5/: detect.py
(+145 files in other folders)
